syntax = "proto3";

option java_package = "com.harper.capital";
option java_multiple_files = true;

message SettingsProto {
  string color_theme = 1;
  string currency = 2;
  uint64 currency_last_update = 3;
}